# ecn_sonar

./: CMakeLists.txt  Image_test.cpp  README.md  Trajectory_plot.cpp  display_node.cpp  image_test.cpp  mapping_node.cpp  mapping_node_scaled.cpp  package.xml  slam_node.cpp  slam_node_2.cpp  waypoint.cpp  waypoint_sonar.cpp
config/: ecn_auv_control.yaml
launch/: auv.launch  display.launch
scripts/: nav
src/: waypoint_sonar.cpp
urdf/: auv_block.xacro  container.sdf  ecn_auv.urdf  ecn_auv.xacro
